# pocketbook

./: .gitignore  AGENTS.md  README.md  pi-cloud.config
docs/: inkview-app-development.md  rss-reader-design-system.html
docs/mockups/: hide-read-articles.html
examples/hello-inkview/: CMakeLists.txt  main.cpp
examples/rss-reader-journal/: CMakeLists.txt  litehtml_container.cpp  litehtml_container.h  main.cpp
examples/rss-reader-mockup/: CMakeLists.txt  main.cpp
scripts/: build-hello.sh  build-rss-journal.sh  build-rss-mockup.sh  deploy-rss-journal.sh  deploy-rss-mockup.sh  deploy.sh
